--- a/quiz.html
+++ b/quiz.html
@@ -5,21 +5,28 @@
     <meta charset="utf-8" />
     <title>Code Terminology</title>
     <script type="text/javascript" src="quiz.js"></script>
+    <!--  couldn't get this to work.
+    <script type="module" scr="data.js"></script>
+    -->
     <!--  bootstrap not used atm
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         -->
     <link rel="stylesheet" href="quiz.css" />
 </head>
 <body>
+    <div class="title-head">
     <h2>Learning Terminology</h2>
+    <button id="start" class="start" onclick="start_quiz()">START</button>
+        </div>
+
     <div class="Instructions">
-        <p>
-            Like multiple choice only more fun.
-            Pick an answer, test your memory,
-            and get useful tools to help make it stick.
+        <p class="center-justify">
+            Like multiple choice only more fun.<br />
+            Pick an answer, test your memory,<br />
+            and get useful tools to help make it stick.<br />
         </p>
     </div>
-    <button id="start" onclick="start_quiz()">START</button>
+    <div class="quiz_box">
     <div class="results" id="results">results div</div>
     <img alt="loading next question img" id="load_image" />
     <div class="question_s">
@@ -27,24 +34,26 @@
         <div class="line"></div>
         <ul>
             <li id="answerA">testing A</li>
-            <button type="button">A</button>
+            <button type="button" class="quiz_answers" id="a">A</button>
         </ul>
         <div class="line"></div>
+
         <ul>
             <li id="answerB">testing B</li>
-            <button type="button">B</button>
+            <button type="button" class="quiz_answers" id="b">B</button>
         </ul>
         <div class="line"></div>
         <ul>
             <li id="answerC">testing C</li>
-            <button type="button">C</button>
+            <button type="button" class="quiz_answers" id="c">C</button>
         </ul>
         <div class="line"></div>
         <ul>
             <li id="answerD">testing D</li>
-            <button type="button">D</button>
+            <button type="button" class="quiz_answers" id="d">D</button>
         </ul>
         <div class="line"></div>
+    </div>
     </div>
     <!-- testing items
     <h6 id="constant">TESTING SETTING CONST VARIABLE INSIDE FUNCTION GLOBALLY</h6>
