--- a/basicTerminology.html
+++ b/basicTerminology.html
@@ -15,12 +15,14 @@
     <div class="line"></div>
 
     <h3 class="which_question" id="which_question"></h3>
+    <div class="line"></div>
+    <h2 class="question" id="question"></h2>
+   
     <div class="quiz_box" id="quiz_box">
         <div class="results" id="results">results div</div>
         <img alt="loading next question img" id="load_image" />
         <div class="question_s">
-            <h2 class="question" id="question">testing</h2>
-            <div class="line"></div>
+           
             <ul>
                 <button type="button" class="quiz_answers" id="a">A</button>
                 <li id="answerA">testing A</li>
@@ -47,6 +49,23 @@
             </ul>
 
         </div>
+    </div>
+    <div class="true_false" id="true_false_box">
+
+        <ul>
+
+            <button type="button" class="quiz_answers" id="True">T</button>
+            <li id="True"> True </li>
+        </ul>
+        <div class="line"></div>
+        <ul>
+
+            <button type="button" class="quiz_answers" id="False">F</button>
+            <li id="False"> False </li>
+        </ul>
+
+
+
     </div>
 
 </body>
