I was uploading the old one... doh

--- a/basicTerminology.html
+++ b/basicTerminology.html
@@ -13,14 +13,18 @@
     <div class="Instructions" id="instructions">
         <p>Test and learn some basic terminology. <br> Click Start Quiz to begin. <br /></p>
         <button class="start" id="start_button" onclick="start_quiz()"> Start Quiz </button>
+        
     </div>
+    <div class="hidden_congrats" id="congrats">
+    <p>You finished. Congrats!</p>
+        </div>
+    
     <main>
 
         <img class="basic_term" id="image1" src="dark-blue-keyboard-by-Marta-Pexels.jpg" alt="close up of dark blue themed keyboard" />
-
+        <img class="end_quiz" id="image2" src="adventure-casual-cheerful-541518.jpg" alt="woman on a path with a backpack jumping in joy" />
 
         <div class="results" id="results">results div</div>
-
 
         <h3 class="which_question" id="which_question"></h3>
         <div class="line"></div>
