--- a/basicTerminology.html
+++ b/basicTerminology.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="quiz.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="quiz.css" />
     <title>Basic Terminology</title>
@@ -13,12 +12,12 @@
     <div class="Instructions" id="instructions">
         <p>Test and learn some basic terminology. <br> Click Start Quiz to begin. <br /></p>
         <button class="start" id="start_button" onclick="start_quiz()"> Start Quiz </button>
-        
+
     </div>
     <div class="hidden_congrats" id="congrats">
     <p>You finished. Congrats!</p>
         </div>
-    
+
     <main>
 
         <img class="basic_term" id="image1" src="dark-blue-keyboard-by-Marta-Pexels.jpg" alt="close up of dark blue themed keyboard" />
@@ -67,19 +66,47 @@
             <ul>
 
                 <button type="button" class="quiz_answers" id="True">T</button>
-                <li id="True"> True </li>
+                <li id="True">True</li>
             </ul>
             <div class="line"></div>
             <ul>
 
                 <button type="button" class="quiz_answers" id="False">F</button>
-                <li id="False"> False </li>
+                <li id="False">False</li>
             </ul>
 
 
 
         </div>
     </main>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-functions.js"></script>
 
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#config-web-app -->
+    <script>
+    // Your web app's Firebase configuration
+          var firebaseConfig = {
+            apiKey: "AIzaSyBnSrtsjCgqOwFSIX9CPaJR1RkYUjjOuRo",
+            authDomain: "voyage10-geckos01-quizapp.firebaseapp.com",
+            databaseURL: "https://voyage10-geckos01-quizapp.firebaseio.com",
+            projectId: "voyage10-geckos01-quizapp",
+            // storageBucket: "",
+            // messagingSenderId: "251031078443",
+            appId: "1:251031078443:web:e6d99c1e8e0489df"
+          };
+
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+
+          //make auth and firestore references
+          const auth = firebase.auth();
+          const db = firebase.firestore();
+          const functions = firebase.functions();
+    </script>
+    <script type="text/javascript" src="quiz.js"></script>
 </body>
 </html>
