--- a/quiz.html
+++ b/quiz.html
@@ -9,10 +9,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         -->
     <link rel="stylesheet" href="quiz.css" />
+    <link rel="stylesheet" href="quiz_auth.css" />
 </head>
 <body>
     <div class="title-head">
         <h2>Let's make it Stick.</h2>
+    </div>
+    <div class="messages-container">
+      <div class="logged-in-message">Welcome</div>
+    </div>
+    <div class="auth-container">
+      <a href="auth_html/signup.html" class="new-user">
+        <button>New User</button>
+      </a>
+      <a href="auth_html/login.html" class="login">
+        <button>Login</button>
+      </a>
+      <div class="logout">
+        <button class="logout-button">Logout</button>
+      </div>
     </div>
 
     <div class="Instructions">
@@ -33,6 +48,35 @@
     <h4>What's this do?</h4>
     <h4>I'm bored. Let's break things</h4>
         </div>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-functions.js"></script>
 
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+  https://firebase.google.com/docs/web/setup#config-web-app -->
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+    apiKey: "AIzaSyBnSrtsjCgqOwFSIX9CPaJR1RkYUjjOuRo",
+    authDomain: "voyage10-geckos01-quizapp.firebaseapp.com",
+    databaseURL: "https://voyage10-geckos01-quizapp.firebaseio.com",
+    projectId: "voyage10-geckos01-quizapp",
+    // storageBucket: "",
+    // messagingSenderId: "251031078443",
+    appId: "1:251031078443:web:e6d99c1e8e0489df"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+
+    //make auth and firestore references
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+    const functions = firebase.functions();
+  </script>
+  <script type="text/javascript" src="auth.js"></script>
+  <script type="text/javascript" src="quiz_page_actions.js"></script>
 </body>
 </html>
