add user can create own category and question feature, add create question form, restructure folders for scripts and styles

--- a/basicTerminology.html
+++ b/basicTerminology.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="quiz.css" />
+    <link rel="stylesheet" href="static/stylesheets/quiz.css" />
     <title>Basic Terminology</title>
 </head>
 <body>
@@ -107,6 +107,6 @@
           const db = firebase.firestore();
           const functions = firebase.functions();
     </script>
-    <script type="text/javascript" src="quiz.js"></script>
+    <script type="text/javascript" src="static/scripts/quiz.js"></script>
 </body>
 </html>
