--- a/quiz.html
+++ b/quiz.html
@@ -8,8 +8,8 @@
     <!--  bootstrap not used atm
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         -->
-    <link rel="stylesheet" href="quiz.css" />
-    <link rel="stylesheet" href="quiz_auth.css" />
+    <link rel="stylesheet" href="static/stylesheets/quiz.css" />
+    <link rel="stylesheet" href="static/stylesheets/quiz_auth.css" />
 </head>
 <body>
     <div class="title-head">
@@ -37,17 +37,23 @@
             and get useful tools to help make it stick.<br />
         </p>
     </div>
+    <div class="get-started-container">
+      <button class="get-started-button">Get Started</button>
+    </div>
     <div class="link-box">
-    <h3>  Choose your catagory:</h3>
-    <div class="line"></div>
-    <h4><a href="basicTerminology.html">Basic Terminology</a></h4>
-    <!-- add link when scripts written-->
-    <h4>Arrays, lists and things those silly strings.</h4>
-    <h4>Lets get Technical, but not too much.</h4>
-    <h4>Data Structures, where did I put that Tupperware?</h4>
-    <h4>What's this do?</h4>
-    <h4>I'm bored. Let's break things</h4>
-        </div>
+      <h3>  Choose your catagory:</h3>
+      <div class="line"></div>
+      <h4><a href="basicTerminology.html">Basic Terminology</a></h4>
+      <!-- add link when scripts written-->
+      <h4>Arrays, lists and things those silly strings.</h4>
+      <h4>Lets get Technical, but not too much.</h4>
+      <h4>Data Structures, where did I put that Tupperware?</h4>
+      <h4>What's this do?</h4>
+      <h4>I'm bored. Let's break things</h4>
+      <a href="create_form.html">
+        <button class="create-form">Create Your Own Questions</button>
+      </a>
+    </div>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-auth.js"></script>
@@ -76,7 +82,7 @@
     const db = firebase.firestore();
     const functions = firebase.functions();
   </script>
-  <script type="text/javascript" src="auth.js"></script>
-  <script type="text/javascript" src="quiz_page_actions.js"></script>
+  <script type="text/javascript" src="static/scripts/auth.js"></script>
+  <script type="text/javascript" src="static/scripts/quiz_page_actions.js"></script>
 </body>
 </html>
