fix script and stylesheet references to files

--- a/auth_html/signup.html
+++ b/auth_html/signup.html
@@ -8,8 +8,8 @@
     <!--  bootstrap not used atm
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         -->
-    <link rel="stylesheet" href="../quiz.css" />
-    <link rel="stylesheet" href="../quiz_auth.css" />
+    <link rel="stylesheet" href="..static/stylesheets/quiz.css" />
+    <link rel="stylesheet" href="..static/stylesheets/quiz_auth.css" />
 </head>
 <body>
   <div class="title-head">
@@ -56,6 +56,6 @@
         const db = firebase.firestore();
         const functions = firebase.functions();
   </script>
-  <script type="text/javascript" src="../auth.js"></script>
+  <script type="text/javascript" src="../static/scripts/auth.js"></script>
 </body>
 </html>
