add view page to see user's questions

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <a href="create_form.html">
         <button class="create-form">Create Your Own Questions</button>
       </a>
+      <h4><a href="user_questions.html">Go to Your Questions</a></h4>
     </div>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
